<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment 1</string>
    <string name="action_settings">Settings</string>
    <string name="exercise1">Exercise 1</string>
    <string name="btnRandom">New Random</string>
    <string name="title_activity_random">Random</string>
    <string name="exercise2">Exercise 2</string>
    <string name="title_activity_bmi">BMI</string>
    <string name="exercise3">Exercise 3</string>
    <string name="bmi_enter">Please enter your length (in cm) and weight (in kg):</string>
    <string name="bmiLength">Length:</string>
    <string name="bmiWeight">Weight:</string>
    <string name="btnBmiCalculate">Calculate</string>
    <string name="btnBmiReset">Reset</string>
    <string name="title_activity_color_display">ColorDisplay</string>
    <string name="btnDisplayColor">Display Color</string>
    <string name="labelRed">Red:</string>
    <string name="labelGreen">Green:</string>
    <string name="labelBlue">Blue:</string>
    <string name="title_activity_my_countries">MyCountries</string>
    <string name="hello_world">Hello world!</string>

</resources>
