<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/greenish"
    tools:context="se.pikzel.assignment1.BMIActivity">

    <TextView
        android:id="@+id/bmiDescription"
        android:text="@string/bmi_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bmiInputs"
        android:layout_below="@+id/bmiDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmiLength"/>

        <EditText
            android:id="@+id/bmiEditLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmiWeight"/>

        <EditText
            android:id="@+id/bmiEditWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmiButtons"
        android:layout_below="@+id/bmiInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBmiCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBmiCalculate"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/btnBmiReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBmiReset"
            android:onClick="onClick"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/bmiButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/bmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/bmiCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

</RelativeLayout>
